--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -51,6 +51,7 @@
 .column2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: var(--spacing-m);
 }
 
 .about,
@@ -99,6 +100,7 @@
   display: flex;
   flex-flow: row nowrap;
   color: var(--accent-orange);
+  gap: var(--spacing-xs);
 }
 
 .bottom {
